[gd_scene load_steps=4 format=3 uid="uid://kpw1armnhu0v"]

[ext_resource type="Script" path="res://board/invaderboard/invader_card_space.gd" id="1_6rxwo"]
[ext_resource type="Texture2D" uid="uid://dr3i31r8muswy" path="res://art/board/InvaderCardSpotBorder.png" id="1_e5jp0"]
[ext_resource type="Texture2D" uid="uid://cmh001tir7wdk" path="res://art/board/InvaderCardSpotBackground.png" id="4_5hnfq"]

[node name="InvaderCardSpace" type="VBoxContainer"]
offset_right = 170.0
offset_bottom = 284.0
script = ExtResource("1_6rxwo")

[node name="CardSpace" type="MarginContainer" parent="."]
layout_mode = 2

[node name="Background" type="TextureRect" parent="CardSpace"]
layout_mode = 2
texture = ExtResource("4_5hnfq")

[node name="Border" type="TextureRect" parent="CardSpace"]
layout_mode = 2
texture = ExtResource("1_e5jp0")

[node name="CardContainer" type="Node" parent="CardSpace"]

[node name="TextLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Build"
horizontal_alignment = 1
